Añadir referencia a instalación geoserver; actualizar instalación portal